<resources>
    <string name="app_name">Warn Contacts</string>
    <string name="action_settings">Settings</string>
    <string name="send_email">Send e-mail</string>
    <string name="send_sms">Send SMS</string>
    <string name="send_location">Send location</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="activate">Activate</string>
    <string name="actions">Actions</string>
    <string name="please_grant_permissions_for_read_contacts">Please grant permissions for read contacts</string>
    <string name="please_grant_permissions_for_get_location">Please grant permissions for get location</string>
    <string name="please_grant_permissions_for_send_sms">Please grant permissions for send SMS</string>
    <string name="confirm_contact_deletion">Confirm contact deletion</string>
    <string name="allowed_trigger_app_summary">Select which app is authorized to send panic alerts</string>
    <string name="allowed_trigger_app">Allowed trigger app</string>
    <string name="none">None</string>
    <string name="trigger_app">Trigger App</string>
    <string name="runned_notification_title">Contacts warned</string>
    <string name="runned_notification_content">Hope you are ok :)</string>
    <string name="runned_notification">Notify run complete</string>
    <string name="runned_notification_summary">Shows a notification after a trigger run</string>
    <string name="alert_message">Alert Message</string>
    <string name="alert_message_summary">The message send to your contacts</string>
    <string name="alert_message_default">I am in trouble</string>

    <string name="pref_alert_message" translatable="false">pref_alert_message</string>
    <string name="pref_trigger_app" translatable="false">pref_trigger_app</string>
    <string name="pref_runned_notification" translatable="false">pref_runned_notification</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
